syntax = "proto3";
package monitor;

message CpuLoad
{
    float load_avg_1 = 1;
    float load_avg_3 = 2;
    float load_avg_15 = 3;
}